--- a/templates/validasi.html
+++ b/templates/validasi.html
@@ -8,7 +8,8 @@
 <body>
     <div class="container">
         <h1>Hasil Validasi Dokter</h1>
-        <img src="{{ image_url }}" alt="Foto Rontgen" class="xray-img">
+        
+        <img src="{{ image_url }}" alt="Gambar Rontgen" class="xray-image">
 
         <div class="result-box">
             <h2>
